overflow fix for mobile nav

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -51,7 +51,7 @@
     background: #1d1c73;
     height: auto; 
     flex-direction: column; 
-    width: 100vw; 
+    width: 100%; 
     left: 0;
     top: 47px;
     transform: translateY(-110%);
